[build-system]
build-backend = 'setuptools.build_meta'
requires = ["setuptools >= 68.0"]

[project]
name = "bitstruct"
description = """This module performs conversions between Python values \
and C bit field structs represented as Python \
byte strings."""
readme = "README.rst"
requires-python = ">=3.7"
license = { text = "MIT" }
keywords = [
  "bit field",
  "bit parsing",
  "bit unpack",
  "bit pack",
]
authors = [
    { name = "Erik Moqvist", email = "erik.moqvist@gmail.com" },
    { name = "Ilya Petukhov" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = []
dynamic = ["version"]

[project.urls]
Documentation = "https://bitstruct.readthedocs.io/en/latest/"
Issues = "https://github.com/eerimoq/bitstruct/issues"
Source = "https://github.com/eerimoq/bitstruct"
Homepage = "https://github.com/eerimoq/bitstruct"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "bitstruct.__version__"}

[tool.setuptools.package-data]
"*" = [
  "**/py.typed",
  "**.pyi",
]

[tool.cibuildwheel]
test-requires = "pytest"
test-command = "pytest  -v --assert=plain {project}/tests"
build-frontend = "build"
skip = "pp*"
