[build-system]
requires = ["scikit-build-core"]
build-backend = "scikit_build_core.build"

[project]
name = "bitstruct"
description = """This module performs conversions between Python values \
and C bit field structs represented as Python \
byte strings."""
readme = "README.rst"
requires-python = ">=3.7"
license = { text = "MIT" }
keywords = [
  "bit field",
  "bit parsing",
  "bit unpack",
  "bit pack",
]
authors = [
    { name = "Erik Moqvist", email = "erik.moqvist@gmail.com" },
    { name = "Ilya Petukhov" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = []
dynamic = ["version"]

[project.urls]
Documentation = "https://bitstruct.readthedocs.io/en/latest/"
Issues = "https://github.com/eerimoq/bitstruct/issues"
Source = "https://github.com/eerimoq/bitstruct"
Homepage = "https://github.com/eerimoq/bitstruct"

[tool.scikit-build]
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
sdist.include = ["src/bitstruct/_version.py"]
wheel.packages = ["src/bitstruct"]

[tool.setuptools_scm]  # Section required
write_to = "src/bitstruct/_version.py"

[tool.cibuildwheel]
test-requires = "pytest"
test-command = "pytest  -v --assert=plain {project}/tests"
build-frontend = "build"
skip = "pp*"
